<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_welcome_screen"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_migraine_buddy"
        android:textSize="@dimen/text_size_40"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="@dimen/margin_20"
        android:layout_marginLeft="@dimen/margin_20"
        android:layout_marginRight="@dimen/margin_20"
        android:textColor="@color/color_welcome_text"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_welcome"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_20"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_started"
        android:textSize="@dimen/text_size_18"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="@dimen/margin_20"
        android:layout_marginLeft="@dimen/margin_20"
        android:layout_marginRight="@dimen/margin_20"
        android:textColor="@color/color_welcome_text2"
        android:id="@+id/textView2" />

    <Button
        android:id="@+id/btnCreateAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/create_new_account"
        android:textSize="@dimen/text_size_20"
        android:textAllCaps="false"
        android:textColor="@color/color_welcome_text"
        android:background="@drawable/button_border_create_account"
        android:layout_marginTop="@dimen/margin_40"
        android:layout_marginLeft="@dimen/margin_40"
        android:layout_marginRight="@dimen/margin_40"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/suggest_create_account"
        android:textSize="@dimen/text_size_18"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="@dimen/margin_20"
        android:layout_marginLeft="@dimen/margin_20"
        android:layout_marginRight="@dimen/margin_20"
        android:textColor="@color/color_welcome_text2"/>

    <Button
        android:id="@+id/btnHaveAnAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/have_an_account"
        android:textSize="@dimen/text_size_20"
        android:textAllCaps="false"
        android:textColor="@color/color_welcome_text"
        android:background="@drawable/button_border_create_account"
        android:layout_marginTop="@dimen/margin_20"
        android:layout_marginLeft="@dimen/margin_40"
        android:layout_marginRight="@dimen/margin_40"/>
</LinearLayout>