<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/color_catch_bg"
    android:paddingLeft="@dimen/margin_20"
    android:paddingRight="@dimen/margin_20"
    tools:context="com.dutradev.migrainebuddy.CatchActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_marginTop="@dimen/margin_30">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginRight="@dimen/margin_20">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_medication"
                android:id="@+id/imageView3"
                android:background="@drawable/blue_circle_bg"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/skipped_beta_blockers"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_20"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="@dimen/margin_5"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_liquid_bottle"
                android:background="@drawable/red_circle_bg"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/skipped_magnesium"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_20"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="@dimen/margin_5"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/your_best_catches"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="@dimen/margin_20"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/track_them_anymore"
        android:textColor="@android:color/white"
        android:gravity="center"
        android:layout_marginBottom="@dimen/margin_30"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_20"
        android:background="@drawable/white_transparent_border"
        android:text="@string/let_catch_more"
        android:textColor="@android:color/white"
        android:textAllCaps="false"
        android:textSize="@dimen/text_size_20"/>
</LinearLayout>
