<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/color_your_automatic_sleep"
        android:padding="@dimen/margin_20">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color_toolbar"
            android:text="@string/your_automatic_sleep"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/color_toolbar"
            android:text="@string/turned_off"
            android:textStyle="bold"
            android:layout_marginLeft="@dimen/margin_5"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/places_ic_clear"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/buddies_center_bg">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/no_sleep"
            android:textSize="@dimen/text_size_25"
            android:textColor="@color/color_no_sleep"
            android:layout_gravity="center_vertical"
            android:gravity="center"/>
    </LinearLayout>
</LinearLayout>