<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sleep_time"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.dutradev.migrainebuddy.SleepTimeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1">
        <TextView
            style="@style/SleepTimeTitleTheme"
            android:text="@string/sleep_time" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/margin_10">
            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/sleepDaySpinner"
                android:layout_weight="2"/>
            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/sleepHourSpinner"
                android:layout_weight="1"
                android:layout_marginRight="@dimen/margin_40"
                android:layout_marginLeft="@dimen/margin_50"/>
        </LinearLayout>
        <TextView
            style="@style/SleepTimeTitleTheme"
            android:text="@string/awake_time" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/margin_10">
            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/awakeDaySpinner"
                android:layout_weight="2"/>
            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/awakeHourSpinner"
                android:layout_weight="1"
                android:layout_marginLeft="@dimen/margin_40"
                android:layout_marginRight="@dimen/margin_20"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/btn_awake_now"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/frame_chat"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/duration"
            android:textColor="@color/color_forgot_button"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="@dimen/margin_30"
            android:padding="@dimen/margin_15"/>
        <TextView
            style="@style/SleepTimeTitleTheme"
            android:text="@string/sleep_morning_notes"
            android:id="@+id/textView"
            android:gravity="center_vertical"
            android:drawableRight="@drawable/ic_buddy_migraine_status_unknown"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black"
            android:layout_marginRight="@dimen/margin_5"
            android:layout_marginLeft="@dimen/margin_5"
            android:layout_marginTop="@dimen/margin_40"
            android:layout_marginBottom="@dimen/margin_10"/>
        <TextView
            style="@style/SleepTimeTitleTheme"
            android:text="@string/yesterday_notes"
            android:gravity="center_vertical"
            android:drawableRight="@drawable/ic_buddy_migraine_status_unknown"/>
        <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/black"
        android:layout_marginRight="@dimen/margin_5"
        android:layout_marginLeft="@dimen/margin_5"
        android:layout_marginTop="@dimen/margin_40"
        android:layout_marginBottom="@dimen/margin_10"/>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:textColor="@android:color/white"
        android:textSize="@dimen/margin_20"
        android:background="@color/color_bottom_menu"
        android:paddingTop="@dimen/margin_20"
        android:paddingBottom="@dimen/margin_20"/>
</LinearLayout>
