<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_help_step1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/blurred_my_triggers_bar"
        android:id="@+id/imageView2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/blurred_daily_trigger_options">
        <RelativeLayout
            android:id="@+id/rlv2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/triangle"
            android:layout_gravity="right"
            android:layout_marginRight="60dp"
            android:layout_marginTop="-20dp"/>
        <LinearLayout
            android:id="@+id/rlv1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/rectangle_popup"
            android:padding="@dimen/margin_20"
            android:layout_marginLeft="@dimen/margin_30"
            android:layout_marginRight="@dimen/margin_30">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_20"
                android:text="@string/instruction2"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_15"
                android:paddingLeft="@dimen/margin_10"
                android:paddingRight="@dimen/margin_10"
                android:gravity="center"/>
            <Button
                android:id="@+id/btnNext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_border_create_account"
                android:text="@string/next"
                android:textColor="@android:color/white"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/yellow_transparent_border"
        android:baselineAligned="false"
        android:padding="2dp"
        android:layout_marginTop="-5dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:background="@color/color_sat">
            <Button
                android:id="@+id/btnSat"
                android:text="@string/sat"
                style="@style/DaysTheme"
                android:background="@color/color_sat"
                android:enabled="false"/>
            <TextView
                android:text="29"
                style="@style/DaysTextViewTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:background="@color/color_sun">
            <Button
                android:id="@+id/btnSun"
                android:text="@string/sun"
                style="@style/DaysTheme"
                android:background="@color/color_sun"
                android:enabled="false"/>
            <TextView
                android:text="30"
                style="@style/DaysTextViewTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:background="@color/color_mon">
            <Button
                android:id="@+id/btnMon"
                android:text="@string/mon"
                style="@style/DaysTheme"
                android:background="@color/color_mon"
                android:enabled="false"/>
            <TextView
                android:text="31"
                style="@style/DaysTextViewTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:background="@color/color_tue">
            <Button
                android:id="@+id/btnTue"
                android:text="@string/tue"
                style="@style/DaysTheme"
                android:background="@color/color_tue"
                android:enabled="false"/>
            <TextView
                android:text=" 1 "
                style="@style/DaysTextViewTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:background="@color/color_wed">
            <Button
                android:id="@+id/btnWed"
                android:text="@string/wed"
                style="@style/DaysTheme"
                android:background="@color/color_wed"
                android:enabled="false"/>
            <TextView
                android:text=" 2 "
                style="@style/DaysTextViewTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:background="@color/color_thu">
            <Button
                android:id="@+id/btnThu"
                android:text="@string/thu"
                style="@style/DaysTheme"
                android:background="@color/color_thu"
                android:textColor="@color/color_text_menu"
                android:enabled="false"/>
            <TextView
                android:text=" 3 "
                style="@style/DaysTextViewTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/green_circle_text_view"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:background="@color/color_fri">
            <Button
                android:id="@+id/btnFri"
                android:text="@string/fri"
                style="@style/DaysTheme"
                android:paddingLeft="2dp"
                android:paddingRight="2dp"
                android:background="@color/color_fri"
                android:enabled="false"/>
            <TextView
                android:text="29"
                style="@style/DaysTextViewTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
